--- a/index.html
+++ b/index.html
@@ -49,13 +49,40 @@
                     </div>
                     <div class="galleryBox">
                         <div class="galleryBox__section">
-                            <img src="">
+                            <img src="assets/2.jpg">
                         </div>
                         <div class="galleryBox__section">
-                            <img src="">
+                            <img src="assets/4.jpg">
                         </div>
                         <div class="galleryBox__section">
-                            <img src="">
+                            <img src="assets/5.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/6.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/7.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/8.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/9.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/10.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/11.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/12.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/17.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/18.jpg">
                         </div>
                     </div>
                 </div>
