--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <section class="galleryInfo">
                 <h1 id="galleryStory">
-                    HeavyMonster Gallery
+                    Show Gallery
                 </h1>
                 <h2>
                     Gallery Story
