--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://assets.stickpng.com/thumbs/58406746657b0e0e08612e45.png" rel="shortcut icon">
     <title>Gallery</title>
     <link href="style.css" rel="stylesheet">
 </head>
