--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="http://assets.stickpng.com/thumbs/58406746657b0e0e08612e45.png" rel="shortcut icon">
     <title>Gallery</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
     <header class="header">
@@ -42,10 +43,30 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quisquam, ducimus porro neque labore natus voluptates eveniet sunt veniam corporis qui quibusdam iure doloribus quas, dicta in magnam sit? Vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque repellat nisi, dolores labore asperiores perferendis reprehenderit placeat ex modi vel natus sint facere rerum aliquid, doloribus accusantium totam, omnis amet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque autem error iusto amet veniam, ducimus exercitationem praesentium accusantium. Ad aperiam ipsum atque rerum voluptate. Excepturi velit maiores ad repellendus. Rerum!
                     
                 </p>
+                <h2>
+                    Share Links
+                </h2>
+                <p class="shareText">
+                    Send youre jobs here:
+                </p>
+                <div class="shareLinks">
+                    <a href="https://vk.com/id641620461">
+                        <i class="fa fa-vk" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.facebook.com/artem.ivanko.3/">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.instagram.com/_heavymonster_/?hl=ru">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://web.telegram.org/#/im">
+                        <i class="fa fa-telegram" aria-hidden="true"></i>
+                    </a>
+                </div>
                 <div class="gallerySection">
                     <div class="galleryName">
                         <h2 id="gallery">
-                            Gallery:
+                            Gallery
                         </h2>
                     </div>
                     <div class="galleryBox">
