--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
                         <div class="galleryBox__section">
                             <img src="assets/18.jpg">
                         </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/19.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/20.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/21.jpg">
+                        </div>
                     </div>
                 </div>
         </section>
