--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <section class="galleryInfo">
                 <h1 id="galleryStory">
-                    Show Gallery
+                    Brand.Gallery
                 </h1>
                 <h2>
                     Share Links
