--- a/index.html
+++ b/index.html
@@ -61,7 +61,16 @@
                             <img src="assets/4.jpg">
                         </div>
                         <div class="galleryBox__section">
+                            <img src="assets/27.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/2.jpg">
+                        </div>
+                        <div class="galleryBox__section">
                             <img src="assets/5.jpg">
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/20.jpg">
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/6.jpg">
