--- a/index.html
+++ b/index.html
@@ -14,10 +14,30 @@
     <header class="header">
         <img src="https://wallpaperaccess.com/full/130061.png">
         <div class="logo">
+            <div class="logo__img">
+                <img src="https://uploads.scratch.mit.edu/users/avatars/67211403.png" alt="">
+            </div>
             <a href="#">Brand.</a>
         </div>
-        <div class="loginForm">
-            LogIn
+        <div class="menu">
+            <div class="menuBar">
+            </div>
+            <div class="closeBar">
+            </div>
+        </div>
+        <div class="navigation">
+            <a href="#">
+                Home
+            </a>
+            <a href="#logIn">
+                LogIn
+            </a>
+            <a href="#links">
+                Links
+            </a>
+            <a href="#gallery">
+                Gallery
+            </a>
         </div>
     </header>
 
@@ -74,6 +94,9 @@
                     <h2>
                         Brand.Gallery...
                     </h2>
+                    <div class="loginForm" id="logIn">
+                        LogIn
+                    </div>
                 </div>
                 <h2>
                     Share Links
@@ -81,7 +104,7 @@
                 <p class="shareText">
                     Send your jobs here:
                 </p>
-                <div class="shareLinks">
+                <div class="shareLinks" id="links">
                     <a href="https://vk.com/id641620461">
                         <i class="fa fa-vk" aria-hidden="true"></i>
                     </a>
@@ -97,7 +120,7 @@
                 </div>
                 <div class="gallerySection">
                     <div class="galleryName">
-                        <h2 id="gallery">
+                        <h2 id="gallery" id="gallery">
                             Gallery
                         </h2>
                     </div>
@@ -172,5 +195,15 @@
         <script src="script.js"></script>
         <script src="login.js"></script>
     </main>
+
+    <footer class="footer">
+        <img src="https://i.pinimg.com/originals/66/6f/af/666faf06465785e9f6a2cc386ebde772.jpg" alt="">
+        <div class="footer__container">
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut quisquam aliquam deleniti explicabo reprehenderit! Fugit nemo, ducimus error magnam mollitia, culpa velit sed illum repudiandae beatae expedita nulla debitis assumenda.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda accusamus at magnam, blanditiis dolor vero explicabo quidem harum fugit libero error quasi debitis, ipsa minus, sapiente consequuntur autem maxime aliquid?
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
