--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#">
                 Home
             </a>
-            <a href="#logIn">
+            <a class="loginForm">
                 LogIn
             </a>
             <a href="#links">
@@ -94,9 +94,6 @@
                     <h2>
                         Brand.Gallery...
                     </h2>
-                    <div class="loginForm" id="logIn">
-                        LogIn
-                    </div>
                 </div>
                 <h2>
                     Share Links
