--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="assets/logo.png" rel="shortcut icon">
     <title>Gallery</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
@@ -124,66 +125,318 @@
                     <div class="galleryBox">
                         <div class="galleryBox__section">
                             <img src="assets/1.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/2.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/3.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/4.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/5.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/6.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/7.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/8.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/9.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/10.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/11.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/12.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/13.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/14.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/15.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/16.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/17.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/18.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/19.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/20.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                         <div class="galleryBox__section">
                             <img src="assets/21.jpg">
+                            <div class="rating">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                                <input type="radio" name="" id="">
+                            </div>
                         </div>
                     </div>
                 </div>
