--- a/index.html
+++ b/index.html
@@ -1593,6 +1593,216 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/22.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Img-Name
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: style
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 00/00/00
+                                            </p>
+                                            <p>
+                                                Colors: black, white, gray
+                                            </p>
+                                            <p>
+                                                Drawing Time: 00/00/00
+                                            </p>
+                                            <p>
+                                                Price: 00.00,00
+                                            </p>
+                                            <p>
+                                                Idea: idea
+                                            </p>
+                                            <p>
+                                                Tools: pencils, linear, marker
+                                            </p>
+                                            <p>
+                                                Tool Type: "Sakura Sketch", "Copic Sketch"
+                                            </p>
+                                            <p>
+                                                Licence: licence
+                                            </p>
+                                            <p>
+                                                Description: description
+                                            </p>
+                                            <p>
+                                                Comment: comment
+                                            </p>
+                                            <p>
+                                                Rating:
+                                            </p>
+                                            <div class="rating">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/23.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Img-Name
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: style
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 00/00/00
+                                            </p>
+                                            <p>
+                                                Colors: black, white, gray
+                                            </p>
+                                            <p>
+                                                Drawing Time: 00/00/00
+                                            </p>
+                                            <p>
+                                                Price: 00.00,00
+                                            </p>
+                                            <p>
+                                                Idea: idea
+                                            </p>
+                                            <p>
+                                                Tools: pencils, linear, marker
+                                            </p>
+                                            <p>
+                                                Tool Type: "Sakura Sketch", "Copic Sketch"
+                                            </p>
+                                            <p>
+                                                Licence: licence
+                                            </p>
+                                            <p>
+                                                Description: description
+                                            </p>
+                                            <p>
+                                                Comment: comment
+                                            </p>
+                                            <p>
+                                                Rating:
+                                            </p>
+                                            <div class="rating">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/24.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Img-Name
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: style
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 00/00/00
+                                            </p>
+                                            <p>
+                                                Colors: black, white, gray
+                                            </p>
+                                            <p>
+                                                Drawing Time: 00/00/00
+                                            </p>
+                                            <p>
+                                                Price: 00.00,00
+                                            </p>
+                                            <p>
+                                                Idea: idea
+                                            </p>
+                                            <p>
+                                                Tools: pencils, linear, marker
+                                            </p>
+                                            <p>
+                                                Tool Type: "Sakura Sketch", "Copic Sketch"
+                                            </p>
+                                            <p>
+                                                Licence: licence
+                                            </p>
+                                            <p>
+                                                Description: description
+                                            </p>
+                                            <p>
+                                                Comment: comment
+                                            </p>
+                                            <p>
+                                                Rating:
+                                            </p>
+                                            <div class="rating">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
         </section>
