--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="galleryBox__section">
+                        <!-- <div class="galleryBox__section">
                             <img src="assets/11.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
@@ -668,7 +668,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="galleryBox__section">
                             <img src="assets/12.jpg">
                             <div class="info-box">
@@ -1246,6 +1246,52 @@
                                             </p>
                                             <p>
                                                 Date: 09/01/21
+                                            </p>
+                                            <p>
+                                                Colors: #000, #fff
+                                            </p>
+                                            <p>
+                                                Rating:
+                                            </p>
+                                            <div class="rating">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                                <input type="radio" name="" id="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/25.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Summer
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: Vintage, Sketch, Scary Doodle
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 20/06/21
                                             </p>
                                             <p>
                                                 Colors: #000, #fff
