--- a/index.html
+++ b/index.html
@@ -381,6 +381,37 @@
                             </div>
                         </div>
                         <div class="galleryBox__section">
+                            <img src="assets/26.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Nickblob
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: Sketch, Doodle
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 03/07/21
+                                            </p>
+                                            <p>
+                                                Colors: #000, #111, #fff, WG3, WG5, WG7, CG5, CG7, PaleYellow, LemonYellow, GanariaYellow, DarkYellow, Orange, FrenchVermillion, CoralRed, CoralPink, VividRed, CherryPink, WineRed, PowderPink, VividPink, BabyBlue, JadeGreen, MintBlue, TurguoiseBlue, DarkBlueLight, MarineBlue, SkyBlue, BrilliantBlue
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="galleryBox__section">
                             <img src="assets/8.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
@@ -657,7 +688,7 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="galleryBox__section">
+                        <!-- <div class="galleryBox__section">
                             <img src="assets/15.jpg">
                             <div class="info-box">
                                 <div class="info-box__disabled">
@@ -687,7 +718,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="galleryBox__section">
                             <img src="assets/16.jpg">
                             <div class="info-box">
