--- a/index.html
+++ b/index.html
@@ -684,6 +684,68 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/19.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Bitter Cry
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: Comic
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 24/07/21
+                                            </p>
+                                            <p>
+                                                Colors: #000, #fff
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="galleryBox__section">
+                            <img src="assets/20.jpg">
+                            <div class="info-box">
+                                <div class="info-box__disabled">
+                                    <div class="info-box__name">
+                                        <h2 class="img-tag">
+                                            Abstraction
+                                        </h2>
+                                        <span class="info-arrow">
+                                            ▲
+                                        </span>
+                                    </div>
+                                    <div class="categories">
+                                        <div class="categories-info">
+                                            <p>
+                                                Style: Abstract
+                                            </p>
+                                            <p>
+                                                Author: HeavyMonster
+                                            </p>
+                                            <p>
+                                                Date: 24/07/21
+                                            </p>
+                                            <p>
+                                                Colors: #000, #fff, Orange, VividRed, CoralRed, CherryPink, FrenchVermillion, Vermillion, GanariaYellow, DarkYellow, PaleYellow
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
         </section>
